Fix: Tabbar - Remove `#nav-bar` z-index at `photon-style` #334

--- a/userChrome.css
+++ b/userChrome.css
@@ -3213,7 +3213,6 @@ menupopup > menu {
 }
 
 /* Remove line at Toolbar's top */
-#nav-bar,
 #tabbrowser-tabs {
   z-index: 1 !important;
 }
